[package]
name = "rutie_attr"
version = "0.1.0"
authors = ["booink <booink.work@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true
name = "rutie_attr"

[dependencies]
libc = "0.2.86"
lazy_static = "1.4"
rutie = "0.8.2"
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
itertools = "0.10.0"
once_cell = "1.7"
rutie_attr_backend = { path = "../rutie-attr-backend" }
